# gdc-client

./: .gitignore  .gitlab-ci.yml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
gdc_client/log/: log.py
gdc_client/parcel/: portability.py  segment.py
gdc_client/upload/: manifest.py
src/gdc_client/: cli.py  utils.py
src/gdc_client/download/: client.py
src/gdc_client/parcel/: client.py  utils.py
src/gdc_client/upload/: client.py
tests/: conftest.py  mock_server.py  test_download_client.py  test_upload_client.py
