[metadata]
name = gdc-client
description = The gdc-client provides several convenience functions over the GDC API which provides general download/upload via HTTPS.
long_description = file: README.md
long_description_content_type = text/markdown
author = GDC Feature Team
author_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
maintainer = GDC Feature Team
maintainer_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
license = Apache Software License 2.0
license_files = LICENSE
url = https://github.com/NCI-GDC/gdc-client
keywords = gdc, client, download, upload
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    cryptography
    jsonschema~=2.6.0
    lxml~=4.4.2
    ndg-httpsclient~=0.5.0
    pyasn1
    pyOpenSSL
    PyYAML>=5.1
    intervaltree~=3.0.2
    importlib_metadata
    termcolor~=1.1.0
    requests~=2.22.0
    progressbar2

[options.packages.find]
where = src

[options.package_data]

[options.extras_require]
dev =
    click>= 8
    flask~=1.0.2
    pytest~=4.6.2
    pytest-cov
    requests-mock~=1.5.2
    moto~=1.3.14
    python-jose<3.3.0       # lower the requirements for cryptography, so python3.5 could work
    httmock~=1.3.0
    cfn-lint<0.22.0  # required by moto, limit version for jsonschema
    aws-sam-translator<1.12.0a

[options.entry_points]
console_scripts =
    gdc-client = gdc_client.cli:main
