[metadata]
name = gdc-client
description = The gdc-client provides several convenience functions over the GDC API which provides general download/upload via HTTPS.
long_description = file: README.md
long_description_content_type = text/markdown
author = GDC Feature Team
author_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
maintainer = GDC Feature Team
maintainer_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
license = Apache Software License 2.0
license_files = LICENSE
url = https://github.com/NCI-GDC/gdc-client
keywords = gdc, client, download, upload
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    jsonschema
    lxml
    PyYAML>=6.0.1
    intervaltree~=3.0.2
    importlib_metadata
    termcolor~=1.1.0
    requests
    progressbar2

[options.packages.find]
where = src

[options.package_data]

[options.extras_require]
dev =
    click>= 8
    flask
    pytest
    pytest-cov
    requests-mock
    moto
    httmock

[options.entry_points]
console_scripts =
    gdc-client = gdc_client.cli:main
